extends Node2D



func _on_back_pressed() -> void:
	queue_free()


func _on_audio_button_pressed() -> void:
	pass # Replace with function body.


func _on_controls_button_pressed() -> void:
	pass # Replace with function body.


func _on_dimensions_button_pressed() -> void:
	pass # Replace with function body.


func _on_items_button_pressed() -> void:
	pass # Replace with function body.


func _on_credits_button_pressed() -> void:
	pass # Replace with function body.
